Content gap fixes (#1425)
* fix: content gap cell values alignment

* fix: keyword cluster condition

* fix: content gap options management

* fix: small design updates

* fix: small corrections

* fix: large component decomposition

--- a/admin/src/assets/styles/layouts/ContentGapTableCells.scss
+++ b/admin/src/assets/styles/layouts/ContentGapTableCells.scss
@@ -17,6 +17,7 @@
 			width: 50%;
 			display: flex;
 			justify-content: center;
+			line-height: 1;
 
 			&-words {
 				color: $white;
